--- a/drawing1/style.css
+++ b/drawing1/style.css
@@ -4,6 +4,8 @@ body{
     animation-iteration-count: infinite;
     animation-direction: alternate;
     animation-timing-function: linear;
+
+    overflow: hidden;
 }
 
 @keyframes colorChange {
