--- a/drawing3/style.css
+++ b/drawing3/style.css
@@ -13,7 +13,7 @@ span{
     left:0;
 
     background: url(cactus.gif);
-    /* gif by Amanda Bonaiuto */
+    /* gif by Amanda Bonaiuto https://www.instagram.com/amandabonaiuto/?hl=en*/
 
     opacity: 0;
     mix-blend-mode: overlay;
