--- a/style.css
+++ b/style.css
@@ -3,13 +3,10 @@ body{
     height: 100vh;
     width: auto;
 
-    /* The image used */
     background-image: url("media/background.gif");
+    /* background gif is by artist Seerlight https://www.instagram.com/seerlight/?hl=en*/
 
-    /* Full height */
     height: 100%;
-
-    /* Center and scale the image nicely */
     background-position: 0% 8%;
     background-repeat: no-repeat;
     background-size: cover;
